# wsimorph

./: .gitignore  LICENSE  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
tests/images/: test_tile.py  test_wsi.py
wsimorph/: __main__.py
wsimorph/_module/: _module.py
wsimorph/_utils/: _cli_args.py  _log_and_time.py
wsimorph/images/: __init__.py  _tile.py  _wsi.py
