[tool.poetry]
name = "wsimorph"
version = "0.1.0"
description = ""
authors = ["Hugh Warden <hugh.warden@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
wsimorph = "wsimorph.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.5"
humanize = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
